[gd_scene load_steps=7 format=3 uid="uid://d0jy1g5air0hu"]

[ext_resource type="FontFile" uid="uid://wkawo8mlct6j" path="res://Assets/Font/Early GameBoy.ttf" id="1_647yc"]
[ext_resource type="Script" path="res://Scripts/Intro_Controller.gd" id="1_a0ttv"]
[ext_resource type="Texture2D" uid="uid://dbyom7bh1jgcg" path="res://Assets/Sprites/gbjam1.png" id="3_ik52y"]
[ext_resource type="Texture2D" uid="uid://dxirpdcj6la7s" path="res://Assets/Sprites/SoundlessWoods-logo.png" id="3_kwae8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs88r"]
bg_color = Color(0.0588235, 0.219608, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sa2tn"]
bg_color = Color(0.0588235, 0.219608, 0.0588235, 1)

[node name="Intro" type="Node2D"]
script = ExtResource("1_a0ttv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="Panel" parent="CanvasLayer"]
offset_left = -14.0
offset_top = -15.0
offset_right = 179.0
offset_bottom = 155.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cs88r")

[node name="Credits" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.065
offset_top = 5.0
offset_right = 86.935
offset_bottom = 80.22
grow_horizontal = 2
theme_override_colors/font_color = Color(0.607843, 0.737255, 0.0588235, 1)
theme_override_fonts/font = ExtResource("1_647yc")
theme_override_font_sizes/font_size = 9
text = "A game by
   Marcio Siqueira
   Fabio Batisteti
   Eder Luz
   Felipe Janick"

[node name="Logo" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(80, 65.04)
texture = ExtResource("3_kwae8")

[node name="Title" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -70.5
offset_right = 77.0
offset_bottom = -29.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.607843, 0.737255, 0.0588235, 1)
theme_override_fonts/font = ExtResource("1_647yc")
theme_override_font_sizes/font_size = 15
text = "Soundless
Wood"
horizontal_alignment = 1

[node name="PressStart" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -23.0
offset_right = 79.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.607843, 0.737255, 0.0588235, 1)
theme_override_fonts/font = ExtResource("1_647yc")
theme_override_font_sizes/font_size = 12
text = "press start"
horizontal_alignment = 1

[node name="Background2" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = -17.0
offset_top = -10.0
offset_right = 176.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sa2tn")

[node name="Story" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -29.0
offset_right = 70.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.611765, 0.745098, 0.0470588, 1)
theme_override_fonts/font = ExtResource("1_647yc")
theme_override_font_sizes/font_size = 8
text = "I crashed my car...
I must fix it...
It's dark..."

[node name="Gbjam" type="Sprite2D" parent="."]
position = Vector2(80, 73)
texture = ExtResource("3_ik52y")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
